- Whitespace fix in wxChoice.rbw in bigdemo (Roy Sutton)
- DC#draw_lines fixes (Roy Sutton)
- Small presentation tweaks to docs (Alex Fenton)
- Fixed tarball name, OS X, version TODOs in rakepackage.rb (Alex Fenton)
- Include file fix to prevent mdi sample crashing (Roy Sutton)
- Improvements to bigdemo ListBox sample: prefix searching (Roy Sutton)
- Minor text corrections to bigdemo Static Text sample (Roy Sutton)
- Added commented-out AcceptsFiles to be implemented later (Roy Sutton)

====0.0.35 tag on 2006-09-03 included this:===
- Small fix to parameter list indenting in wx_latexparser.rb (Alex Fenton)
- Fixed images.rb so it can be run from outside dir, added notes (Alex Fenton)
- Fixed crasher in controls.rb due to deleted DC#free method (Alex Fenton)
- Added licensing info to all samples (Alex Fenton/Kevin Smith)
- Added SAMPLES-LICENSE.TXT (Kevin Smith/Alex Fenton)
- Added ActivationEvent class, with a sample (Alex Fenton)

====0.0.34 tag  on 2006-08-30 included all of this:===
- Changed gemspec to "wxruby2-preview" version 0.0.34 (Alex Fenton)
- Added Wx::WXRUBY_VERSION and Wx::WXWIDGETS_VERSION (Alex Fenton)
- Added TreeCtrl sample (Alex Fenton)
- Updated TODO, removed completed items, added known errors (Alex Fenton)
- Fixed crasher in caret.rb sample due to deleted method (Alex Fenton)
- Deleted redundant code in Events.i (Alex Fenton)
- Allow bigdemo to be run from other dirs, fix icons and title (Alex Fenton)
- Fixed crashes due to set_sizer ownership (Kevin Smith)
- Remove dangerous and misleading DC#free method (Kevin Smith)
- Fixed crash-on-exit in minimal.rb by changing Dialog superclass (Kevin Smith)
- Added WXRUBY_RELEASE build option (Alex Fenton/Kevin Smith)
- Enabled focus event handlers in bigdemo/wxTextCtrl.rb (Roy Sutton)
- Added default App#on_assert to wx.rb (Kevin Smith)
- Fixes to ControlWithItem, ComboBox;samples in bigdemo.rb (Roy Sutton)
- Add WXRUBY_VERBOSE build environment variable (Kevin Smith)