@@ -1,3 +1,4 @@
+- wxWindow.h fixes for Windows background colour (Roy SUtton)
 - Whitespace fix in wxChoice.rbw in bigdemo (Roy Sutton)
 - DC#draw_lines fixes (Roy Sutton)
 - Small presentation tweaks to docs (Alex Fenton)
